[changes]: added the authentication services